[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/interface/themes/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://SpawnHUD.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/Fonts/Manrope/Manrope-VariableFont_wght.ttf" type="FontFile" id=3]
[ext_resource path="res://src/Troops/Player/HUD/CPButtons.gd" type="Script" id=4]

[sub_resource type="FontFile" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="SpawnHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ChooseClass" type="Control" parent="Control"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ClassesButtons" type="HBoxContainer" parent="Control/ChooseClass"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -147.0

[node name="Button" type="Button" parent="Control/ChooseClass/ClassesButtons"]
offset_right = 637.0
offset_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RIFLE"

[node name="Button2" type="Button" parent="Control/ChooseClass/ClassesButtons"]
offset_left = 641.0
offset_right = 1278.0
offset_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LLANÇA-MÍSSILS"

[node name="Button3" type="Button" parent="Control/ChooseClass/ClassesButtons"]
offset_left = 1282.0
offset_right = 1920.0
offset_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "TÈCNIC"

[node name="Button4" type="Button" parent="Control/ChooseClass/ClassesButtons"]
visible = false
offset_left = 1443.0
offset_right = 1920.0
offset_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "FRANCTIRADOR"

[node name="WaitTime" type="Label" parent="Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 12.0
offset_right = -18.0
offset_bottom = 53.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "MANQUEN 20\""
align = 2
valign = 1

[node name="Spectate" type="VBoxContainer" parent="Control"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = -136.0
offset_right = 291.0
offset_bottom = 136.0

[node name="Label" type="Label" parent="Control/Spectate"]
offset_right = 217.0
offset_bottom = 30.0
text = "ESPECTA:"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Spectate"]
offset_top = 34.0
offset_right = 217.0
offset_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Button" parent="Control/Spectate/HBoxContainer"]
visible = false
offset_right = 43.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<-"

[node name="Button2" type="Button" parent="Control/Spectate/HBoxContainer"]
offset_right = 217.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NAU CAPITAL"

[node name="Right" type="Button" parent="Control/Spectate/HBoxContainer"]
visible = false
offset_left = 139.0
offset_right = 230.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "->"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Spectate"]
offset_top = 94.0
offset_right = 217.0
offset_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Button" parent="Control/Spectate/HBoxContainer2"]
visible = false
offset_right = 74.0
offset_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<-"

[node name="Button2" type="Button" parent="Control/Spectate/HBoxContainer2"]
offset_right = 217.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NAUS D'ATAC"

[node name="Right" type="Button" parent="Control/Spectate/HBoxContainer2"]
visible = false
offset_left = 143.0
offset_right = 217.0
offset_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "->"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Spectate"]
offset_top = 155.0
offset_right = 217.0
offset_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Button" parent="Control/Spectate/HBoxContainer3"]
visible = false
offset_right = 22.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<-"

[node name="Button3" type="Button" parent="Control/Spectate/HBoxContainer3"]
offset_right = 217.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NAUS DE SUPORT"

[node name="Right" type="Button" parent="Control/Spectate/HBoxContainer3"]
visible = false
offset_left = 182.0
offset_right = 217.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "->"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Spectate"]
offset_top = 215.0
offset_right = 217.0
offset_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Button" parent="Control/Spectate/HBoxContainer4"]
visible = false
offset_right = 22.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<-"

[node name="Button4" type="Button" parent="Control/Spectate/HBoxContainer4"]
offset_right = 217.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NAUS NORMALS"

[node name="Right" type="Button" parent="Control/Spectate/HBoxContainer4"]
visible = false
offset_left = 168.0
offset_right = 217.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "->"

[node name="ChooseCP" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="CPButtons" type="Control" parent="Control/ChooseCP"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="ChangeCamButton" type="Button" parent="Control/ChooseCP"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1678.0
offset_top = 787.0
offset_right = 1837.0
offset_bottom = 824.0
text = "Espai"

[node name="ChangeClassButton" type="Button" parent="Control/ChooseCP"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1450.0
offset_top = 787.0
offset_right = 1659.0
offset_bottom = 824.0
text = "Canvia la classe"

[node name="PlayerRespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="pressed" from="Control/ChooseClass/ClassesButtons/Button" to="." method="_on_class_button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Control/ChooseClass/ClassesButtons/Button2" to="." method="_on_class_button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer/Left" to="." method="_on_spectate_pressed" binds= [ 1, -1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer/Button2" to="." method="_on_spectate_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer/Right" to="." method="_on_spectate_pressed" binds= [ 1, 1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer2/Left" to="." method="_on_spectate_pressed" binds= [ 2, -1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer2/Button2" to="." method="_on_spectate_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer2/Right" to="." method="_on_spectate_pressed" binds= [ 2, 1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer3/Left" to="." method="_on_spectate_pressed" binds= [ 3, -1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer3/Button3" to="." method="_on_spectate_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer3/Right" to="." method="_on_spectate_pressed" binds= [ 3, 1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer4/Left" to="." method="_on_spectate_pressed" binds= [ 4, -1 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer4/Button4" to="." method="_on_spectate_pressed" binds= [ 4 ]]
[connection signal="pressed" from="Control/Spectate/HBoxContainer4/Right" to="." method="_on_spectate_pressed" binds= [ 4, 1 ]]
[connection signal="pressed" from="Control/ChooseCP/ChangeCamButton" to="." method="_on_ChangeCamButton_pressed"]
[connection signal="pressed" from="Control/ChooseCP/ChangeClassButton" to="." method="_on_ChangeClassButton_pressed"]
[connection signal="timeout" from="PlayerRespawnTimer" to="." method="enable_spawn" binds= [ true ]]
